@@ -6,6 +6,8 @@ AUX file-5.39-add-missing-termios.patch 813 BLAKE2B 6b65d89bcf6b3a5b7d125e05b951
 AUX file-5.39-portage_sandbox.patch 668 BLAKE2B ed7556d2f602d848411a5252825401042bef816601f767bc2d24a8e84be7845c459d1149d9a5adfddb59843474dea0f52aead6c4a17ffb27dbd0c7cf14d9cc0b SHA512 c648b7cdd520a91f1c152e1d098db4a0d1877a473bddb5f8fa511b0f556d7a15b958451e071c25595fe1ac8c2a81b475846c13f415d861dc48184d6b19b8b7b7
 AUX file-5.39-seccomp_sandbox.patch 320 BLAKE2B ab7c89575e61cfcaa4072b33716f1aa9af437541e3248b329d6cb44c62581ab65c7b7d455f5e0bbe95103f15c24a54a15325af8947da614c83f9f4bad7148eb3 SHA512 3219903e1c3d9f8973515871f073b54bb3396550b308dcb307d0d8cdbd7d76bbc35417e9764c8d3adc257fdcb4a5c62aa136f5175c420c54b86ea03fede6b2d4
 DIST file-5.37.tar.gz 887682 BLAKE2B c5635e5de879af31cbef1c988275ab8620133909d146769b27a2f8eefa90871fad5fa75e66b9e1d77a6261e5d6dec315fb5a8ad587d8c214eaa0bc2e5a929fe7 SHA512 bf153c15aebdd00329806231d20f295077b8b99efd0181d01279bcf3734a1718567df38cf75bc929eb8015ac98d29bb4bf1228d7ece8bfdfe14dd976391dd06d
+DIST file-5.39.tar.gz 954266 BLAKE2B 4d6d9a6317961e0a2aa391f502b0be8bbb40ede57c3470230d91aaf9ce5d35bcaceb32d551ca5a391fc8c40b64517fdb996833a8b1ca47ced7e92e9e545d2682 SHA512 9cf1a7b769c56eb6f5b25c66ce85fa1300128396e445b2e53dbbd8951e5da973a7a07c4ef9f7ebd1fe945d47bdaf2cd9ef09bd2be6c217a0bcb907d9449835e6
 EBUILD file-5.37-r2.ebuild 3200 BLAKE2B b519cec22a88af59991b556e504934685600e5224546cb2986e4ac31717e3e34c214ff00e8422b304623054b14608c22e3322c862bac34266bc55cde34722aa7 SHA512 3859a536d1ede0da147411835ec5cadc825414b45b86d316a950750e1e00543fdf32cae49a2d4ab83f1c99e6891daa93bbc0960275ed48ff4a8e1bfa8fa6401f
-MISC ChangeLog 119 BLAKE2B 53b1be49766f01bba323c583e2845f6f8bb764087f5ca3e9f7612e6565b9dc915f23864f6382c43ce8e08f3bab6e4e5517de30793d805b9698fe670cfd7b06bc SHA512 bedeb13d595c846097533de05e3cd545eafe989e4bb689965723ce3236fd604a68e64ae39f75f0121dd486105afcaf7b294c96ef5f2eddb584822199d2d880cd
+EBUILD file-5.39-r2.ebuild 3280 BLAKE2B cb2c915885f0e7ce06de528ad6e261645f9fe2db73d4ae3921f914a376198179cb74082680bb537c49c6cc7fbb8b2a5906ad54780d818dff495c2d6956766290 SHA512 3d1cb5e71da20fc6ed2cd202eea3e312d8870bc164add7fef7d105b6795369c8ce8a1e77b76c305085bbe8bcb766b1677adee76fffc607231e8d93301d64e18e
+MISC ChangeLog 331 BLAKE2B 56def7d1c502c2e42b2e31c8840c361d23f1ff78c777bb2d46664f2ec435f07d5f1524f2f68cb611bffb888c6b848f4fa9d24108f9b65efe3e1c207e731aee89 SHA512 96a7583485bdd70944af5544adc01fa0b5ee699ccd80c02f8d323a1d7135c6729b6eee3d77b660526cce7342da53161d75b71827d3798f1e8bd11d5ce780423b
 MISC metadata.xml 381 BLAKE2B 242f4a2403d0a4c69c7ff400fdbd447bb7fb8572dc57dc05f3edd0c875da68433217bec46d43467fa03c5e9ec69616e3450635ff2662ae3ed830a138521e23ab SHA512 f69d67890ecb0b574d414c432df12f6e8d31ceb7755055683941017563da8713d07728e49cd4a7277699a97cd3ba732c946ecf5435cee94778a0d5652e7d6857
